--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -9,7 +9,7 @@ phases:
       - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.11.0/bin/linux/amd64/kubectl
       - chmod +x kubectl
       - mv kubectl /usr/local/bin
-      - curl -LO https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
+      - curl -LO https://amazon-eks.s3.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
       - chmod +x aws-iam-authenticator
       - mv aws-iam-authenticator /usr/local/bin/heptio-authenticator-aws
       - ./scripts/create_eks_cluster.sh -k ${K8S_NAME} -s ${K8S_KEYPAIR} -b ${BUCKET_NAME}
